# osptBWT

./: .gitignore  .gitmodules  CMakeLists.txt  DynRleForRlbwt.hpp  IOutils.hpp  OnlineRlbwt.hpp  OsptBWT.hpp  README.md  main.cpp  osptBWT.cpp
